# Fractal

./: CMakeLists.txt  LICENSE  README.md  fractal.c  fractal.h  image.c  image.h  main.c
.github/workflows/: build.yml
